--- a/test_webcam_opencv30/CMakeLists.txt
+++ b/test_webcam_opencv30/CMakeLists.txt
@@ -10,7 +10,9 @@ include_directories(${OpenCV_INCLUDE_DIRS})
 find_package(Qt5 COMPONENTS Core Gui Widgets REQUIRED)
 
 
-add_executable(camera_test ../main_nano.cpp)
+add_executable(camera_test ../main_nano.cpp .. mylib.cpp)
+#add_executable(camera_test ../main_TK1.cpp)
+#cuda_add_executable(camera_test ../main_openfile.cpp)
 
 target_link_libraries(camera_test Qt5::Widgets)
 target_link_libraries(camera_test Qt5::Core)
